[package]
name = "threadpool_scope"
version = "0.1.0"
authors = ["James Millard <millard.jn@gmail.com>"]
edition = "2018"
description = "A library for adding scopes to the threadpool crate"
documentation = "https://docs.rs/threadpool_scope"
license = "MIT"
repository = "https://github.com/millardjn/threadpool_scope"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8"
parking_lot = "0.11"

#[dev-dependencies]
rayon = "1.3"
scoped_threadpool = "0.1"
num_cpus = "1.13"
